// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component tile renders property modal correctly 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-2"
          aria-labelledby="pf-modal-part-1"
          aria-modal="true"
          class="pf-v5-c-modal-box properties-modal"
          data-ouia-component-id="BasicModal"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-0"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="BasicModal-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <header
            class="pf-v5-c-modal-box__header"
          >
            <h1
              class="pf-v5-c-modal-box__title"
              id="pf-modal-part-1"
            >
              <span
                class="pf-v5-c-modal-box__title-text"
              >
                Atom
              </span>
            </h1>
          </header>
          <div
            class="pf-v5-c-modal-box__body"
            id="pf-modal-part-2"
          >
            <p
              data-testid="properties-modal-table-description"
            >
              Poll Atom RSS feeds.
            </p>
            <table
              aria-label="Simple table"
              class="pf-v5-c-table pf-m-grid-md pf-m-compact"
              data-ouia-component-id="OUIA-Generated-Table-1"
              data-ouia-component-type="PF5/Table"
              data-ouia-safe="true"
              role="grid"
            >
              <caption
                class="pf-v5-c-table__caption"
                data-testid="properties-modal-table-caption"
              >
                Available properties (1)
              </caption>
              <thead
                class="pf-v5-c-table__thead"
              >
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-1"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                >
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-name"
                    scope="col"
                    tabindex="-1"
                  >
                    name
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-type"
                    scope="col"
                    tabindex="-1"
                  >
                    type
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-kind"
                    scope="col"
                    tabindex="-1"
                  >
                    kind
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-required"
                    scope="col"
                    tabindex="-1"
                  >
                    required
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-defaultValue"
                    scope="col"
                    tabindex="-1"
                  >
                    defaultValue
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-description"
                    scope="col"
                    tabindex="-1"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody
                class="pf-v5-c-table__tbody"
                role="rowgroup"
              >
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-2"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                  data-testid="row-0"
                >
                  <td
                    class="pf-v5-c-table__td"
                    data-label="name"
                    data-testid="row-0-cell-name"
                    tabindex="-1"
                  >
                    Bridge Error Handler
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-label="type"
                    data-testid="row-0-cell-type"
                    tabindex="-1"
                  >
                    boolean
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-label="kind"
                    data-testid="row-0-cell-kind"
                    tabindex="-1"
                  >
                    property
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-label="required"
                    data-testid="row-0-cell-required"
                    tabindex="-1"
                  >
                    false
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-label="defaultValue"
                    data-testid="row-0-cell-defaultValue"
                    tabindex="-1"
                  >
                    false
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-label="description"
                    data-testid="row-0-cell-description"
                    tabindex="-1"
                  >
                    Allows for bridging the consumer to the Camel
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Kamelet tile renders property modal correctly 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-4"
          aria-labelledby="pf-modal-part-3"
          aria-modal="true"
          class="pf-v5-c-modal-box properties-modal"
          data-ouia-component-id="BasicModal"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-2"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="BasicModal-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <header
            class="pf-v5-c-modal-box__header"
          >
            <h1
              class="pf-v5-c-modal-box__title"
              id="pf-modal-part-3"
            >
              <span
                class="pf-v5-c-modal-box__title-text"
              >
                AWS DynamoDB Streams Source
              </span>
            </h1>
          </header>
          <div
            class="pf-v5-c-modal-box__body"
            id="pf-modal-part-4"
          >
            <p
              data-testid="properties-modal-table-description"
            >
              Receive events from Amazon DynamoDB Streams.
            </p>
            <table
              aria-label="Simple table"
              class="pf-v5-c-table pf-m-grid-md pf-m-compact"
              data-ouia-component-id="OUIA-Generated-Table-3"
              data-ouia-component-type="PF5/Table"
              data-ouia-safe="true"
              role="grid"
            >
              <caption
                class="pf-v5-c-table__caption"
                data-testid="properties-modal-table-caption"
              >
                Available properties (2)
              </caption>
              <thead
                class="pf-v5-c-table__thead"
              >
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-4"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                >
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-name"
                    scope="col"
                    tabindex="-1"
                  >
                    name
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-type"
                    scope="col"
                    tabindex="-1"
                  >
                    type
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-required"
                    scope="col"
                    tabindex="-1"
                  >
                    required
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-defaultValue"
                    scope="col"
                    tabindex="-1"
                  >
                    defaultValue
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-description"
                    scope="col"
                    tabindex="-1"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody
                class="pf-v5-c-table__tbody"
                role="rowgroup"
              >
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-5"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                  data-testid="row-0"
                >
                  <td
                    class="pf-v5-c-table__td"
                    data-label="name"
                    data-testid="row-0-cell-name"
                    tabindex="-1"
                  >
                    Table
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-label="type"
                    data-testid="row-0-cell-type"
                    tabindex="-1"
                  >
                    string
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-label="required"
                    data-testid="row-0-cell-required"
                    tabindex="-1"
                  >
                    true
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-label="defaultValue"
                    data-testid="row-0-cell-defaultValue"
                    tabindex="-1"
                  />
                  <td
                    class="pf-v5-c-table__td"
                    data-label="description"
                    data-testid="row-0-cell-description"
                    tabindex="-1"
                  >
                    The name of the DynamoDB table.
                  </td>
                </tr>
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-6"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                  data-testid="row-1"
                >
                  <td
                    class="pf-v5-c-table__td"
                    data-label="name"
                    data-testid="row-1-cell-name"
                    tabindex="-1"
                  >
                    Key
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-label="type"
                    data-testid="row-1-cell-type"
                    tabindex="-1"
                  >
                    string
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-label="required"
                    data-testid="row-1-cell-required"
                    tabindex="-1"
                  >
                    false
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-label="defaultValue"
                    data-testid="row-1-cell-defaultValue"
                    tabindex="-1"
                  >
                    amazonaws.com
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-label="description"
                    data-testid="row-1-cell-description"
                    tabindex="-1"
                  >
                    New key
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Model tile with empty properties renders property modal correctly 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-3"
          aria-labelledby="pf-modal-part-2"
          aria-modal="true"
          class="pf-v5-c-modal-box properties-modal"
          data-ouia-component-id="BasicModal"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-1"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="BasicModal-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <header
            class="pf-v5-c-modal-box__header"
          >
            <h1
              class="pf-v5-c-modal-box__title"
              id="pf-modal-part-2"
            >
              <span
                class="pf-v5-c-modal-box__title-text"
              >
                Api Key
              </span>
            </h1>
          </header>
          <div
            class="pf-v5-c-modal-box__body"
            id="pf-modal-part-3"
          >
            <p
              data-testid="properties-modal-table-description"
            >
              Rest security basic auth definition
            </p>
            <table
              aria-label="Simple table"
              class="pf-v5-c-table pf-m-grid-md pf-m-compact"
              data-ouia-component-id="OUIA-Generated-Table-2"
              data-ouia-component-type="PF5/Table"
              data-ouia-safe="true"
              role="grid"
            >
              <caption
                class="pf-v5-c-table__caption"
                data-testid="properties-modal-table-caption"
              >
                Available properties (0)
              </caption>
              <thead
                class="pf-v5-c-table__thead"
              >
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-3"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                >
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-name"
                    scope="col"
                    tabindex="-1"
                  >
                    name
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-type"
                    scope="col"
                    tabindex="-1"
                  >
                    type
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-kind"
                    scope="col"
                    tabindex="-1"
                  >
                    kind
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-required"
                    scope="col"
                    tabindex="-1"
                  >
                    required
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-defaultValue"
                    scope="col"
                    tabindex="-1"
                  >
                    defaultValue
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-testid="header-description"
                    scope="col"
                    tabindex="-1"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody
                class="pf-v5-c-table__tbody"
                role="rowgroup"
              >
                <tr>
                  <td
                    colspan="8"
                  >
                    <div
                      class="pf-v5-l-bullseye"
                    >
                      <div
                        class="pf-v5-c-empty-state pf-m-sm"
                      >
                        <div
                          class="pf-v5-c-empty-state__content"
                        >
                          <div
                            class="pf-v5-c-empty-state__header"
                            data-testid="empty-state"
                          >
                            <div
                              class="pf-v5-c-empty-state__icon"
                            >
                              <svg
                                aria-hidden="true"
                                class="pf-v5-svg"
                                fill="currentColor"
                                height="1em"
                                role="img"
                                viewBox="0 0 512 512"
                                width="1em"
                              >
                                <path
                                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                                />
                              </svg>
                            </div>
                            <div
                              class="pf-v5-c-empty-state__title"
                            >
                              <h2
                                class="pf-v5-c-empty-state__title-text"
                              >
                                No properties found for apiKey
                              </h2>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
